--- a/src/app/modules/monsters/monsters.component.html
+++ b/src/app/modules/monsters/monsters.component.html
@@ -2,7 +2,10 @@
 <div class="row text-center">
   <div class="col-lg-12">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let monster of (monstersSrv.monsters$ | async)">{{ monster.name }}</li>
+      <li class="list-group-item" *ngFor="let monster of (monstersSrv.monsters$ | async)">
+        <span>{{ monster.name }}</span>
+        <button class="btn btn-danger" (click)="checkContent()">Check</button>
+      </li>
     </ul>
   </div>
 </div>
