--- a/src/app/modules/robot-factory/robot-factory.component.html
+++ b/src/app/modules/robot-factory/robot-factory.component.html
@@ -1,13 +1,11 @@
 <h3 class="text-center">Robot Factory</h3>
 <div class="row">
   <div class="col-md-6">
-    <input type="text" placeholder="Name" #robot class="form-control">
-  </div>
-  <div class="col-md-6">
-    <button class="btn btn-md btn-success" (click)="setModel(robot.value)">Create</button>
+    <button class="btn btn-md btn-success" (click)="setModelName('Mazinger')">Active Mazinger</button>
   </div>
 </div>
-<div class="row" style="padding-top: 30px">
-  <app-robot-body [name]="name" class="col-md-6 text-center"></app-robot-body>
+<br>
+<div class="row">
+  <app-robot-body [robot]="robot" class="col-md-6 text-center"></app-robot-body>
   <app-robot-weapon class="col-md-6 text-center"></app-robot-weapon>
 </div>
