--- a/src/app/modules/robot-factory/robot-factory.component.html
+++ b/src/app/modules/robot-factory/robot-factory.component.html
@@ -1,7 +1,7 @@
 <h3 class="text-center">Robot Factory</h3>
 <div class="row">
   <div class="col-md-6">
-    <button class="btn btn-md btn-success" (click)="setModelName('Mazinger')">Active Mazinger</button>
+    <button class="btn btn-md btn-success" (click)="setModelName('Mazinger')">Activate Mazinger</button>
   </div>
 </div>
 <br>
