--- a/src/app/modules/robot-factory/body/robot-body.component.html
+++ b/src/app/modules/robot-factory/body/robot-body.component.html
@@ -1,7 +1,7 @@
 <h5>Body Parts</h5>
 <div class="row">
   <div class="col-md-12">
-    <label><b>Robot Model:</b></label> <span><em>{{robot}}</em></span>
+    <label><b>Robot Model:</b></label> <span><em>{{robot.name}}</em></span>
   </div>
 </div>
 <br>
